EV-188 fixed keyboard overflow

--- a/new-frontend/src/global.css
+++ b/new-frontend/src/global.css
@@ -86,3 +86,8 @@ button:focus {
     --green: #00703c;
     --red: #FF0000;
 }
+
+.kioskboard-row-dynamic .kioskboard-key {
+    max-width: 6% !important;
+
+}
